Bearbeitung eines Wettkampfes wieder aktivierbar machen
closes #60

--- a/config/locales/competition.de.yml
+++ b/config/locales/competition.de.yml
@@ -7,6 +7,8 @@ de:
       competitions/publishing:
         confirm: Bestätigung
         hint: Zusätzlichen Hinweise
+      competitions/unlocking:
+        confirm: Bestätigung
   activerecord:
     attributes:
       competition:
