Anfragen zu Wettkämpfen abschaltbar machen

--- a/config/locales/user.de.yml
+++ b/config/locales/user.de.yml
@@ -16,7 +16,7 @@ de:
         reset_password_token: Zurücksetz-Link
       user_access:
         registration_mail_info: Infomail
-        registration_mail_info_full: E-Mail-Information über neue Registrierungen
+        registration_mail_info_full: E-Mail-Information über neue Registrierungen oder Anfragen
       user_access_request:
         created_at: Erstellt am
         drop_myself: Eigenen Zugang löschen
