Texte für Verwalter erweitern

--- a/config/locales/user.de.yml
+++ b/config/locales/user.de.yml
@@ -66,6 +66,9 @@ de:
       Hallo%{name},
 
       ich habe bei feusport.de die Mannschaft »%{team_name}« für dich angelegt. Wenn du auf den nachfolgenden Link klickst, kannst du die Kontrolle über die Mannschaft übernehmen.
+
+      Du kannst diese E-Mail auch an den entsprechenden Trainer weiterleiten, damit er diese Eintragungen vornehmen kann.
+
       Viele Grüße
 
       %{current}
